--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -50,8 +50,20 @@ a:hover {
 }
 
 /* Parent containers */
+header {
+	margin-top: 0;
+	margin-inline: auto;
+	margin-bottom: 6rem;
+	width: fit-content;
+	font-size: 1.3em;
+	letter-spacing: 0.09em;
+}
+
 .main-container {
-	margin-top: 6rem;
+	/* display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap; */
+	margin-top: 3rem;
 	max-width: 75%;
 	margin-inline: auto;
 }
@@ -118,6 +130,7 @@ progress {
 	background-color: #3282b8;
 	border: transparent solid 1px;
 	cursor: pointer;
+	outline: 1px solid rgb(255 255 255 / 50%);
 }
 
 /* Main Content boxes */
@@ -133,6 +146,10 @@ progress {
 .hide-text::after {
 	content: "Hide";
 	/* color: white; */
+}
+
+#content-div-parent {
+	transition: max-height 1s ease;
 }
 
 .main-content {
