--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -47,13 +47,14 @@ a {
 a:hover {
 	box-shadow: 0px 0px 10px #b5fff5;
 	text-shadow: 0px 2px 10px #b5fff5;
+	background-color: rgb(113 201 206 / 10%);
 }
 
 /* Parent containers */
 header {
 	margin-top: 0;
 	margin-inline: auto;
-	margin-bottom: 6rem;
+	margin-bottom: 5rem;
 	width: fit-content;
 	font-size: 1.3em;
 	letter-spacing: 0.09em;
@@ -63,12 +64,12 @@ header {
 	/* display: flex;
 	flex-direction: column;
 	flex-wrap: nowrap; */
-	margin-top: 3rem;
+	margin-top: 4rem;
 	max-width: 75%;
 	margin-inline: auto;
 }
 
-#header {
+.containerHeader {
 	background-image: linear-gradient(180deg, #2878ad, #33ffcb6b 150%);
 	border-radius: 15px 15px 0 0;
 }
@@ -120,7 +121,7 @@ progress {
 	border-radius: 4px;
 }
 
-#button {
+.button {
 	font-size: 18px;
 	letter-spacing: 0.08em;
 	height: 50px;
@@ -148,7 +149,7 @@ progress {
 	/* color: white; */
 }
 
-#content-div-parent {
+.content-div-parent {
 	transition: max-height 1s ease;
 }
 
