--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -74,6 +74,10 @@ header {
 	border-radius: 15px 15px 0 0;
 }
 
+#containerHeader2 {
+	background-image: linear-gradient(180deg, rgb(8 131 66 / 68%), rgb(51 255 203 / 10%) 150%);
+}
+
 .subHeaderRows {
 	width: 100%;
 	display: flex;
@@ -134,6 +138,10 @@ progress {
 	outline: 1px solid rgb(255 255 255 / 50%);
 }
 
+#button2 {
+	background-color: rgb(23 157 87);
+}
+
 /* Main Content boxes */
 .no-display {
 	display: none;
@@ -175,4 +183,9 @@ progress {
 	margin: 0.75rem 0.5rem;
 	border-radius: 10px;
 	font-weight: 500;
+}
+
+/* 2nd Header main content borders */
+#content-div2 {
+	border-radius: 0 0 15px 15px;
 }
