--- a/CSS/styles1.css
+++ b/CSS/styles1.css
@@ -61,7 +61,7 @@ hr {
 
 p {
 	margin-block-start: 5px;
-	margin-left: 105px;
+	margin-left: 110px;
 	margin-block-end: 5px;
 	line-height: 1.3em;
 	color: rgb(255 240 245);
@@ -84,7 +84,7 @@ p {
 }
 
 .div-flex-child1 {
-	width: 5%;
+	width: min-content;
 	text-align: center;
 	color: rgb(0 5 145);
 	text-shadow: 0 0 1px #000d94;
@@ -93,7 +93,7 @@ p {
 }
 
 pre {
-	margin: 0.1rem 2.5rem;
+	margin: 0.1rem 1.5rem;
 	background-color: rgb(128 128 128 / 1%);
 	padding: 1rem;
 	border-radius: 1rem;
@@ -134,6 +134,12 @@ table {
 	position: absolute;
 	top: 3rem;
 	right: 4rem;
+}
+
+.examples {
+	height: fit-content;
+	width: fit-content;
+	margin-left: 120px;
 }
 
 @media only screen and (max-width: 480px) {
